Add register form

--- a/tasker_app/templates/hello/reg.html
+++ b/tasker_app/templates/hello/reg.html
@@ -28,9 +28,9 @@
     <br>
     <body>
         <div class="text-center align-middle" id="diver">
-          <h2>Make your life easier with <h1>Tasker</h1></h2>
+          <h2>Makewith <h1>Tasker</h1></h2>
           <br>
-          <a class="btn btn-outline-primary" type="button" href="{% url 'register:index' %}">Register</a>
+          <a class="btn btn-outline-primary" type="button" href="#"">Register</a>
         </div>
       </body>
     <br>
