Add register forms

--- a/tasker_app/templates/hello/base.html
+++ b/tasker_app/templates/hello/base.html
@@ -8,30 +8,26 @@
         <link rel="stylesheet" type="text/css" href="#">
         <title> Tasker </title>
     </head>
-    <nav class="navbar navbar-expand-lg navbar-light justify-content-center">
-        <a class="navbar-brand main-heading"> 
-          &nbsp; Tasker
-        </a>
-        
-          <div class="collapse navbar-collapse text-center" id="navbarNavDropdown">
-            <ul class="navbar-nav ms-auto">
-              &nbsp;     &nbsp;     &nbsp; 
-            
-              <li class="nav-item">
-                <a class="btn btn-primary navbar-btn" type="button" href="#">Login</a>
-              </li>
-
-              &nbsp;     &nbsp;     &nbsp; 
-            </ul>
-          </div>
-        </nav>
-    <br>
     <body>
-        <div class="text-center align-middle" id="diver">
-          <h2>Makewith <h1>Tasker</h1></h2>
-          <br>
-          <a class="btn btn-outline-primary" type="button" href="#"">Register</a>
-        </div>
+    <nav class="navbar navbar-expand-lg navbar-light justify-content-center">
+            <a class="navbar-brand main-heading"> 
+              &nbsp; Tasker
+            </a>
+            
+              <div class="collapse navbar-collapse text-center" id="navbarNavDropdown">
+                <ul class="navbar-nav ms-auto">
+                  &nbsp;     &nbsp;     &nbsp; 
+                
+                  <li class="nav-item">
+                    <a class="btn btn-primary navbar-btn" type="button" href="#">Login</a>
+                  </li>
+        
+                  &nbsp;     &nbsp;     &nbsp; 
+                </ul>
+              </div>
+        </nav>
+        {% block content %}
+        {% endblock %}
       </body>
     <br>
     <script src="#"></script>
