--- a/tasker_app/templates/hello/index.html
+++ b/tasker_app/templates/hello/index.html
@@ -1,44 +1,20 @@
-<html>
-    <head>
-        <meta charset="utf-8" />
-
-        <meta name="viewport" content="width-device-width, initial-scale=1, maximum-scale=1"/>
-        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
-
-        <link rel="stylesheet" type="text/css" href="#">
-        <title> Tasker </title>
-    </head>
-    <nav class="navbar navbar-expand-lg navbar-light justify-content-center">
-        <a class="navbar-brand main-heading"> 
-          &nbsp; Tasker
-        </a>
-        
-          <div class="collapse navbar-collapse text-center" id="navbarNavDropdown">
-            <ul class="navbar-nav ms-auto">
-              &nbsp;     &nbsp;     &nbsp; 
-            
-              <li class="nav-item">
-                <a class="btn btn-primary navbar-btn" type="button" href="#">Login</a>
-              </li>
-
-              &nbsp;     &nbsp;     &nbsp; 
-            </ul>
-          </div>
-        </nav>
-    <br>
-    <body>
-        <div class="text-center align-middle" id="diver">
-          <h2>Make your life easier with <h1>Tasker</h1></h2>
-          <br>
-          <a class="btn btn-outline-primary" type="button" href="{% url 'register:index' %}">Register</a>
-        </div>
-      </body>
-    <br>
-    <script src="#"></script>
-    <script src="https://code.jquery.com/jquery-3.3.1.min.js"  crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"
-    integrity="sha384-OgVRvuATP1z7JjH        <br>
-    <br>LkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI"
-    crossorigin="anonymous">
-    </script>
-</html>
+{% extends 'hello/base.html' %}
+  {% block content %}
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+    <div class="text-center align-middle" id="diver">
+      <h2>Make your life easier with <h1>Tasker</h1></h2>
+      <br>
+      <a class="btn btn-outline-primary" type="button" href="{% url 'register:index' %}">Register</a>
+    </div>
+  {% endblock %}
