--- a/register/templates/register/register.html
+++ b/register/templates/register/register.html
@@ -1,32 +1,9 @@
 {% extends 'hello/base.html' %}
 {% load crispy_forms_tags %}
   {% block content %}
-  <br>
-  <br>
-  <br>
-  <br>
-  <br>
-  <br>
-  <br>
-  <br>
-  <br>
-  <br>
-  <br>
-  <br>
-  <form class="form-signin">
-    <h1 class="h3 mb-3">Django Login Demo</h1>
+  <form method="POST" action="">
     {% csrf_token %}
-    <div class="col-xs-3">
-      <label for="ex2">col-xs-3</label>
-      <input class="form-control" id="ex2" type="text">
-    </div>
-    <input id="inputEmail" class="form-control col-xs-3" placeholder="Email address" required="" autofocus="" type="email">
-    <input id="inputPassword" class="form-control" placeholder="Password" required="" type="password">
-    <div class="checkbox mb-3">
-      <label>
-        <input value="remember-me" type="checkbox"> Remember me
-      </label>
-    </div>
-    <button class="btn btn-lg btn-primary btn-block" type="submit">Sign in</button>
+    {{ form.as_p }}
+    <input type="submit" name="Create user">
   </form>
   {% endblock %}
