--- a/tasker_app/templates/hello/base.html
+++ b/tasker_app/templates/hello/base.html
@@ -1,28 +1,23 @@
+{% load static %}
 <html>
     <head>
         <meta charset="utf-8" />
-
+        <link rel="stylesheet" href="{% static 'hello/style.css' %}">
         <meta name="viewport" content="width-device-width, initial-scale=1, maximum-scale=1"/>
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
 
-        <link rel="stylesheet" type="text/css" href="#">
         <title> Tasker </title>
     </head>
     <body>
-    <nav class="navbar navbar-expand-lg navbar-light justify-content-center">
+      <nav class="navbar navbar-expand-lg navbar-light justify-content-center" id="header">
             <a class="navbar-brand main-heading"> 
-              &nbsp; Tasker
+              &nbsp; <b>Tasker</b>
             </a>
-            
               <div class="collapse navbar-collapse text-center" id="navbarNavDropdown">
                 <ul class="navbar-nav ms-auto">
-                  &nbsp;     &nbsp;     &nbsp; 
-                
                   <li class="nav-item">
                     <a class="btn btn-primary navbar-btn" type="button" href="#">Login</a>
                   </li>
-        
-                  &nbsp;     &nbsp;     &nbsp; 
                 </ul>
               </div>
         </nav>
