--- a/register/templates/register/register.html
+++ b/register/templates/register/register.html
@@ -1,9 +1,51 @@
 {% extends 'hello/base.html' %}
 {% load crispy_forms_tags %}
-  {% block content %}
-  <form method="POST" action="">
-    {% csrf_token %}
-    {{ form.as_p }}
-    <input type="submit" name="Create user">
-  </form>
-  {% endblock %}
+{% block content %}
+  <div class="container">
+    <div class="row mt-5">
+      <div class="col-lg-4 bg-white m-auto">
+        <h2 class="text-center pt-3">Sign up</h2>
+        <form action="" method="POST">
+          {% csrf_token %}
+          <div class="input-group mb-4">
+            <span class="input-group-text"><i class="fa fa-user"></i></span>
+            {{ form.username }}
+          </div>
+          <div class="input-group mb-4">
+            <span class="input-group-text"><i class="fa fa-user"></i></span>
+            {{ form.email }}
+          </div>
+          <div class="input-group mb-4">
+            <span class="input-group-text"><i class="fa fa-user"></i></span>
+            {{ form.password1 }}
+          </div>
+          <div class="input-group mb-4">
+            <span class="input-group-text"><i class="fa fa-user"></i></span>
+            {{ form.password2 }}
+          </div>
+          <div class="d-grid">
+            <button type="submit" class="btn btn-success">Sign up</button>
+            <br>
+            <p class="text-center">
+              Already have an account? <a href="#">Sign in</a>
+            </p>
+          </div>
+
+        </form>
+      </div>
+    </div>
+  </div>
+  <script>
+    var form_fields = document.getElementsByTagName('input')
+
+    form_fields[1].placeholder = 'Username...'
+    form_fields[2].placeholder = 'Email...'
+    form_fields[3].placeholder = 'Password...'
+    form_fields[4].placeholder = 'Confirm password...'
+
+    for (var field in form_fields) {
+      form_fields[field].className += 'form-control'
+    }
+  </script>
+
+{% endblock %}
