--- a/tasker_app/templates/hello/index.html
+++ b/tasker_app/templates/hello/index.html
@@ -7,7 +7,7 @@
           <h1>Make your life easier with Tasker</h1>
           <br>
           <button type="button" class="btn btn-primary btn-lg"><a class="rega" href="{% url 'register:index' %}"><b>Register</b></a></button>
-          
+          <button type="button" class="btn btn-success btn-lg m-2">Login</button>
         </div>
       </div>
     </div>
