--- a/register/templates/register/register.html
+++ b/register/templates/register/register.html
@@ -1,40 +1,51 @@
 {% extends 'hello/base.html' %}
 {% load crispy_forms_tags %}
 {% block content %}
-  <div class="container">
-    <div class="row mt-5">
-      <div class="col-lg-4 bg-white m-auto">
-        <h2 class="text-center pt-3">Sign up</h2>
-        <form action="" method="POST">
-          {% csrf_token %}
-          <div class="input-group mb-4">
-            <span class="input-group-text"><i class="fa fa-user"></i></span>
-            {{ form.username }}
+<i class="fa fa-user"></i>
+  <div class="outer1">
+    <div class="middle1">
+      <div class="inner1">
+        <div class="container">
+          <div class="row mt-5">
+            <div class="col-lg-8 bg-white m-auto">
+              <h2 class="text-center pt-3">Sign up</h2>
+              <form action="" method="POST" class="poster">
+                {% csrf_token %}
+                <div class="input-group mb-4">
+                  <span class="input-group-text"><i class="fas fa-address-card	"></i></span>
+                  {{ form.username }}
+                </div>
+                <div class="input-group mb-4">
+                  <span class="input-group-addon"><i class="fa fa-envelope-o fa-fw" aria-hidden="true"></i></span>
+                  {{ form.email }}
+                </div>
+                <div class="input-group mb-4">
+                  <span class="input-group-text"><i class="fas fa-key"></i></span>
+                  {{ form.password1 }}
+                </div>
+                <div class="input-group mb-4">
+                  <span class="input-group-text"><i class="fa-thin fa-user"></i></span>
+                  {{ form.password2 }}
+                </div>
+                
+                <div class="d-grid">
+                  <button type="submit" class="btn btn-success">Sign up</button>
+                  <br>
+                  
+                  <p class="text-center">
+                    Already have an account? <a href="{% url 'login:index'%}">Sign in</a>
+                  </p>
+                </div>
+                
+              </form>
+            </div>
+            
           </div>
-          <div class="input-group mb-4">
-            <span class="input-group-text"><i class="fa fa-user"></i></span>
-            {{ form.email }}
-          </div>
-          <div class="input-group mb-4">
-            <span class="input-group-text"><i class="fa fa-user"></i></span>
-            {{ form.password1 }}
-          </div>
-          <div class="input-group mb-4">
-            <span class="input-group-text"><i class="fa fa-user"></i></span>
-            {{ form.password2 }}
-          </div>
-          <div class="d-grid">
-            <button type="submit" class="btn btn-success">Sign up</button>
-            <br>
-            <p class="text-center">
-              Already have an account? <a href="#">Sign in</a>
-            </p>
-          </div>
-
-        </form>
+        </div>
       </div>
     </div>
   </div>
+
   <script>
     var form_fields = document.getElementsByTagName('input')
 
