--- a/tasker_app/templates/hello/base.html
+++ b/tasker_app/templates/hello/base.html
@@ -2,10 +2,34 @@
 <html>
     <head>
         <meta charset="utf-8" />
+        <link rel="stylesheet" href="{% static 'hello/all.min.css' %}">
         <link rel="stylesheet" href="{% static 'hello/style.css' %}">
         <meta name="viewport" content="width-device-width, initial-scale=1, maximum-scale=1"/>
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
+        
 
+        <style>
+          .outer1 {
+            display: table;
+            position: absolute;
+            top: 0;
+            left: 0;
+            height: 100%;
+            width: 100%;
+          }
+
+          .middle1 {
+            display: table-cell;
+            vertical-align: middle;
+          }
+
+          .inner1 {
+            margin-left: auto;
+            margin-right: auto;
+            width: 700px;
+            /* Whatever width you want */
+          }
+        </style>
         <title> Tasker </title>
     </head>
     <body>
