--- a/register/templates/register/register.html
+++ b/register/templates/register/register.html
@@ -4,30 +4,40 @@
 <i class="fa fa-user"></i>
   <div class="outer1">
     <div class="middle1">
-      <div class="inner1">
+      <div class="inner1 rounded-4 bg-white">
         <div class="container">
-          <div class="row mt-5">
+          <div class="row mt-5 bg-white">
             <div class="col-lg-8 bg-white m-auto">
               <h2 class="text-center pt-3">Sign up</h2>
               <form action="" method="POST" class="poster">
                 {% csrf_token %}
                 <div class="input-group mb-4">
-                  <span class="input-group-text"><i class="fas fa-address-card	"></i></span>
+                  <span class="input-group-text"><i class="fas fa-user-alt"></i></span>
                   {{ form.username }}
                 </div>
                 <div class="input-group mb-4">
-                  <span class="input-group-addon"><i class="fa fa-envelope-o fa-fw" aria-hidden="true"></i></span>
+                  <span class="input-group-text"><i class="fas fa-user-alt"></i></span>
                   {{ form.email }}
                 </div>
                 <div class="input-group mb-4">
-                  <span class="input-group-text"><i class="fas fa-key"></i></span>
+                  <span class="input-group-text"><i class="fas fa-user-alt"></i></span>
                   {{ form.password1 }}
                 </div>
                 <div class="input-group mb-4">
-                  <span class="input-group-text"><i class="fa-thin fa-user"></i></span>
+                  <span class="input-group-text"><i class="fas fa-user-alt"></i></span>
                   {{ form.password2 }}
                 </div>
                 
+                {% if messages %}
+                  <ul class="messages">
+                      {% for message in messages %}
+                      <li {% if message.tags %} class="{{ message.tags }}"{% endif %} style="list-style-type: none; color:rgb(195, 67, 67);">
+                          {% if message.level == DEFAULT_MESSAGE_LEVELS.ERROR %}Important: {% endif %}
+                          {{ message }}
+                      </li>
+                      {% endfor %}
+                  </ul>
+                {% endif %}
                 <div class="d-grid">
                   <button type="submit" class="btn btn-success">Sign up</button>
                   <br>
