--- a/login/templates/login/login.html
+++ b/login/templates/login/login.html
@@ -3,21 +3,35 @@
 {% block content %}
   <div class="outer1">
     <div class="middle1">
-      <div class="inner1">
+      <div class="inner1 rounded-4 bg-white">
         <div class="container">
-          <div class="row mt-5">
-            <div class="col-lg-8 bg-white m-auto">
+          <div class="row mt-6">
+            <div class="col-lg-8 m-auto">
               <h2 class="text-center pt-3">Sign in</h2>
               <form action="" method="POST" class="poster">
                 {% csrf_token %}
                 <div class="input-group mb-4">
-                  <span class="input-group-text"><i class="fa fa-user"></i></span>
-                  {{ form.email }}
+                  <span class="input-group-text"><i class="fas fa-user-alt"></i></span>
+                  <input class="form-control" placeholder="Username" required="" type="text" name="username">
                 </div>
                 <div class="input-group mb-4">
-                  <span class="input-group-text"><i class="fa fa-user"></i></span>
-                  {{ form.password1 }}
+                  <span class="input-group-text"><i class="fas fa-user-alt"></i></span>
+                  <input type="password" id="myInput" placeholder="Password" name="password" class="form-control" data-toggle="password">                  
                 </div>
+                <div class="input-group mb-4 d-grid">
+                  <input type="button" class="btn btn-primary" onclick="myFunction()" value="Show password" style="color: aliceblue;"> 
+                </div>
+                {% if messages %}
+                  <ul class="messages">
+                      {% for message in messages %}
+                      <li {% if message.tags %} class="{{ message.tags }}"{% endif %} style="list-style-type: none; color:rgb(195, 67, 67);">
+                          {% if message.level == DEFAULT_MESSAGE_LEVELS.ERROR %}Important: {% endif %}
+                          {{ message }}
+                      </li>
+                      {% endfor %}
+                  </ul>
+                {% endif %} 
+
                 <div class="d-grid">
                   <button type="submit" class="btn btn-success">Sign in</button>
                   <br>
@@ -27,7 +41,7 @@
                 </div>
 
               </form>
-                
+              
             </div>
           </div>
         </div>
@@ -36,15 +50,14 @@
   </div>
   
   <script>
-    var form_fields = document.getElementsByTagName('input')
-
-    form_fields[1].placeholder = 'Email...'
-    form_fields[2].placeholder = 'Password...'
-  
-
-    for (var field in form_fields) {
-      form_fields[field].className += 'form-control'
+  function myFunction() {
+    var x = document.getElementById("myInput");
+    if (x.type === "password") {
+      x.type = "text";
+    } else {
+      x.type = "password";
     }
+  }
   </script>
 
 {% endblock %}
