--- a/tasker_app/templates/hello/base.html
+++ b/tasker_app/templates/hello/base.html
@@ -2,8 +2,9 @@
 <html>
     <head>
         <meta charset="utf-8" />
-        <link rel="stylesheet" href="{% static 'hello/all.min.css' %}">
+
         <link rel="stylesheet" href="{% static 'hello/style.css' %}">
+        <link rel="stylesheet" href="{% static 'hello/all.min.css' %}">
         <meta name="viewport" content="width-device-width, initial-scale=1, maximum-scale=1"/>
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
         
@@ -32,7 +33,7 @@
         </style>
         <title> Tasker </title>
     </head>
-    <body>
+    <body style="background-color: rgb(253, 253, 253);">
       <nav class="navbar navbar-expand-lg navbar-light justify-content-center" id="header">
             <a class="navbar-brand main-heading"> 
               &nbsp; <b>Tasker</b>
