--- a/tasker_app/templates/hello/base.html
+++ b/tasker_app/templates/hello/base.html
@@ -30,22 +30,16 @@
             width: 700px;
             /* Whatever width you want */
           }
+          #show:after {
+            background-color: rgb(207, 207, 207);
+            color:rgb(22, 22, 22); 
+          }
         </style>
         <title> Tasker </title>
     </head>
     <body style="background-color: rgb(253, 253, 253);">
-      <nav class="navbar navbar-expand-lg navbar-light justify-content-center" id="header">
-            <a class="navbar-brand main-heading"> 
-              &nbsp; <b>Tasker</b>
-            </a>
-              <div class="collapse navbar-collapse text-center" id="navbarNavDropdown">
-                <ul class="navbar-nav ms-auto">
-                  <li class="nav-item">
-                    <a class="btn btn-primary navbar-btn" type="button" href="#">Login</a>
-                  </li>
-                </ul>
-              </div>
-        </nav>
+      
+        <a href="#">da</a>
         {% block content %}
         {% endblock %}
       </body>
