--- a/tasker_app/templates/hello/index.html
+++ b/tasker_app/templates/hello/index.html
@@ -1,13 +1,35 @@
 {% extends 'hello/base.html' %}
   {% block content %}
-  
-    <div class="outer">
-      <div class="middle">
-        <div class="inner">
+  <nav class="navbar navbar-expand-lg navbar-light justify-content-center" id="header">
+    <a href="dsada">dsa</a>
+        <a class="navbar-brand main-heading" href="{% url 'index' %}"><b>Tasker</b></a>
+          <div class="collapse navbar-collapse text-center" id="navbarNavDropdown">
+            <ul class="navbar-nav ms-auto">
+              <li class="nav-item">
+                <a class="btn btn-primary navbar-btn" type="button" href="#">Login</a>
+              </li>
+            </ul>
+          </div>
+    </nav>
+    <a href="#" class="link-primary">Primary link</a>
+    <div class="outer1">
+      <nav class="navbar navbar-expand-lg navbar-light justify-content-center" id="header">
+            <a class="navbar-brand main-heading" href="{% url 'index' %}"><b>Tasker</b></a>
+              <div class="collapse navbar-collapse text-center" id="navbarNavDropdown">
+                <ul class="navbar-nav ms-auto">
+                  <li class="nav-item">
+                    <a class="btn btn-primary navbar-btn" type="button" href="#">Login</a>
+                  </li>
+                </ul>
+                <button type="button" class="btn btn-success btn-lg m-2"><a style="color: white; text-decoration: none;" href="{% url 'login:index' %}">Login</a></button>
+              </div>
+        </nav>
+      <div class="middle1">
+        <div class="inner1">
           <h1>Make your life easier with Tasker</h1>
           <br>
           <button type="button" class="btn btn-primary btn-lg"><a class="rega" href="{% url 'register:index' %}"><b>Register</b></a></button>
-          <button type="button" class="btn btn-success btn-lg m-2">Login</button>
+          <button type="button" class="btn btn-success btn-lg m-2"><a style="color: white; text-decoration: none;" href="{% url 'login:index' %}">Login</a></button>
         </div>
       </div>
     </div>
