Redesign archetecture of tasks page

--- a/tasks/templates/tasks/index.html
+++ b/tasks/templates/tasks/index.html
@@ -8,50 +8,17 @@
   </div>
   <div class="row align-items-start">
     {% for task in tasks %}
-    
+
       <div class="col">
         <h1>Срочно</h1>
+        {{ task }}
 
-      
-
-        <div class="card mb-2">
-          <div class="card-body">
-            <h5 class="card-title">Special title treatment</h5>
-            <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-            <a href="#" class="btn btn-primary">Go somewhere</a>
-            <a href="#" class="btn btn-secondary">Dsadsa</a>
-          </div>
-        </div>
-        <div class="card mb-2">
-            <div class="card-body">
-              <h5 class="card-title">Special title treatment</h5>
-              <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-              <a href="{% url 'tasks:add' %}" class="btn btn-primary">Go somewhere</a>
-              <a href="#" class="btn btn-secondary">Dsadsa</a>
-            </div>
-        </div>
       </div>
       <div class="col">
-        <h1>Средне</h1>
-        <div class="card mb-2">
-          <div class="card-body">
-            <h5 class="card-title">Special title treatment</h5>
-            <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-            <a href="#" class="btn btn-primary">Go somewhere</a>
-            <a href="#" class="btn btn-secondary">Dsadsa</a>
-          </div>
-      </div>
+        
       </div>
       <div class="col">
-        <h1>Не срочно</h1>
-        <div class="card mb-2">
-          <div class="card-body">
-            <h5 class="card-title">Special title treatment</h5>
-            <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-            <a href="#" class="btn btn-primary">Go somewhere</a>
-            <a href="#" class="btn btn-secondary">Dsadsa</a>
-          </div>
-        </div>
+        
       </div>
     {% endfor %}
     
