--- a/tasker_app/templates/hello/base.html
+++ b/tasker_app/templates/hello/base.html
@@ -38,6 +38,16 @@
         <title> Tasker </title>
     </head>
     <body style="background-color: rgb(253, 253, 253);">
+      <nav class="navbar navbar-expand-lg navbar-light justify-content-center" id="header">
+            <a class="navbar-brand main-heading" href="{% url 'index' %}"><b>Tasker</b></a>
+              <div class="collapse navbar-collapse text-center" id="navbarNavDropdown">
+                <ul class="navbar-nav ms-auto">
+                  <li class="nav-item">
+                    <a class="btn btn-primary navbar-btn" type="button" href="#">Login</a>
+                  </li>
+                </ul>
+              </div>
+        </nav>
         {% block content %}
         {% endblock %}
       </body>
