--- a/tasks/templates/tasks/index.html
+++ b/tasks/templates/tasks/index.html
@@ -8,18 +8,21 @@
   </div>
   <div class="row align-items-start">
     {% for task in tasks %}
-
+    {% if priority >= 6 %}
       <div class="col">
         <h1>Срочно</h1>
         {{ task }}
-
+    
       </div>
+    {% elif priority > 3 and priority < 6 %}
       <div class="col">
-        
+        {{ task }}
       </div>
+    {% else %}
       <div class="col">
-        
+        {{ task }}
       </div>
+    {% endif %}
     {% endfor %}
     
   </div>
